objects/Student_Fee__c.object
<CustomObject>
    <label>Student Fee</label>
    <nameField>
        <label>Student Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shape__c</fullName>
        <label>Shape</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
                <value>
                    <fullName>Triangle</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Student Fees</relationshipLabel>
        <relationshipName>Student_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unicersity_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unicersity Invoice</label>
        <referenceTo>Unicersity_Invoice__c</referenceTo>
        <relationshipLabel>Student Fees</relationshipLabel>
        <relationshipName>Student_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>